...

    var id: Self { self }

    var displayName: String {
        switch self {
        case .english:
            "English"
        case .spanish:
            "Spanish study support"
        }
    }
}

...
